# scrupy

./: .gitignore  mkdocs.yml  pyproject.toml
examples/: redis_queue.py  url_crawler.py
scrupy/: __init__.py  crawler.py  mixins.py  request.py  typing.py  utils.py
scrupy/crawler/: __init__.py  base.py  clients.py  crawler.py  frontier.py  history.py
tests/: conftest.py  test_history.py
tests/crawler/: test_base.py  test_crawl_request.py  test_crawler_async.py  test_crawler_base.py  test_crawler_sync.py  test_httpx.py  test_response.py  test_sync.py
