[tool.poetry]
name = "scrupy"
version = "0.1.0"
description = ""
authors = ["surister <surister98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
selectolax = "^0.3.19"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-httpserver = "^1.0.8"
coverage = "^7.4.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.5"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocstrings = {version = "^0.24.0", extras = ["python"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
